Fix table overflowing div

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -150,6 +150,7 @@ h2{
     color:#fafafa;
 }
 .gmr-table {
+    width:100%;
     background-color: teal;
     color: #fafafa;
     font-family: "Raleway", sans-serif;
